# monodrive-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE  setup.sh
config/: scenario_config_multi_vehicle.json  scenario_config_single_vehicle.json  scenario_long.json  scenario_short.json  sensors_bacup.json  simulator_no_traffic.json
cpp-client/: CMakeLists.txt  README.md
cpp-client/buffer_dev/: CMakeLists.txt  buffer_dev.cpp  camera_sensor.cpp  closed_loop.json  collision_sensor.cpp  depth_camera_sensor.cpp  gps_sensor.cpp  imu_sensor.cpp  lidar_scenario.json  lidar_sensor.cpp  occupancy_grid_sensor.cpp  radar_sensor.cpp  scenario.json  scenario_file.cpp  semantic_camera_sensor.cpp  simulator.json  state_sensor.cpp  ultrasonic_sensor.cpp
cpp-client/cpp-examples/stop-sign/: CMakeLists.txt  simulator.json  stop-sign.cpp
cpp-client/occupancy_grid/: CMakeLists.txt  main.cc
cpp-client/parser_dev/: CMakeLists.txt  parser_dev.cpp  scenario.json
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/benchmark/: .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.cpp  workload_camera_1080p.json  workload_camera_1280x800.json  workload_full.json
examples/cpp/buffer_dev/: CMakeLists.txt  Replay.json  camera_sensor.cpp  collision_sensor.cpp  depth_camera_sensor.cpp  imu_sensor.cpp  lidar_sensor.cpp  occupancy_grid_sensor.cpp  radar_sensor.cpp  replay.cpp  replay_dev.cpp  replay_step.cpp  scenario_file.cpp  semantic_camera_sensor.cpp  semantic_lidar_sensor.cpp  sensor_frame_count.cpp  sensor_frame_count_fixed.cpp  simulator_no_traffic.json  simulator_no_traffic_fixed_step.json  state_sensor.cpp
examples/cpp/closed_loop/: CMakeLists.txt  fixed_step.cpp  real_time.cpp  simulator_no_traffic.json  simulator_no_traffic_fixed_step.json
examples/cpp/dev/: CMakeLists.txt  all_cameras.cpp  autopilot_control.cpp  camera_360.cpp  camera_sensor.cpp  closed_loop_new_api.cpp  collision_sensor.cpp  config_export.cpp  depth_camera_sensor.cpp  fisheye_camera.cpp  fisheye_camera_equidistant.cpp  fisheye_camera_poly1.cpp  gps_sensor.cpp  imager.cpp  imager_rccc.cpp  imager_rggb.cpp  imu_sensor.cpp  lidar_sensor.cpp  multi_connection.cpp  multi_viewport.cpp  occupancy_grid_sensor.cpp  radar_sensor.cpp  replay.cpp  replay_dev.cpp  replay_new_api.cpp  replay_step.cpp  rpm_sensor.cpp  scenario_file.cpp  semantic_camera_sensor.cpp  semantic_lidar_sensor.cpp  sensor_frame_count.cpp  sensor_frame_count_fixed.cpp  sensors_from_json.cpp  state_sensor.cpp  ultrasonic_sensor.cpp  waypoint_sensor.cpp
examples/cpp/distributed/: CMakeLists.txt  distributed.cpp  distributed_server.cpp  distributed_server.h  primary_sensors.json  replica_lidar_sensors.json  replica_radar_sensors.json  simulator_straightaway_replay.json
examples/cpp/fixed_step_closed_loop/: CMakeLists.txt  fixed_step.cpp  real_time.cpp  simulator_no_traffic_fixed_step.json
examples/cpp/lane_follower/: CMakeLists.txt  README.md  fixed_step.cpp  fixed_step_lidar.cpp  lane_follower.cpp  pid.h  real_time.cpp  speed_curve.cpp  speed_curve_data.csv  waypoints.cpp
examples/cpp/lights/: CMakeLists.txt  lights.cpp  simulator_straightaway_night.json
examples/cpp/multi_process_example/: CMakeLists.txt  Straightaway5k.json  simulator_controller.cpp  vehicle_controller.cpp  video_display.cpp
examples/cpp/opendrive/: CMakeLists.txt  opendrive.cpp
examples/cpp/replay/: CMakeLists.txt  replay.cpp  replay_example.cpp
examples/cpp/replay_step/: CMakeLists.txt  replay_step.cpp  simulator_replay_step.json
libmonoDrive/: CMakeLists.txt
libmonoDrive/src/: ApiMessage.h  Buffer.h  Configuration.cpp  Configuration.h  DataFrame.cpp  DataFrame.h  DataFramePrimitives.cpp  DataFramePrimitives.h  JsonHelpers.cpp  JsonHelpers.h  LaneSpline.h  Sensor.cpp  Sensor.h  Simulator.cpp  Simulator.h  SimulatorCommands.h  UECompatability.h  command_config.h  sensor_config.h
matlab-client/: Camera.m  CameraSensor.asv  CameraSensor.m  Sensor.asv  Sensor.m  Simulator.asv  (+7 more)
monodrive/core/: BUILD  CMakeLists.txt  README.md
monodrive/core/src/: ApiMessage.cpp  ApiMessage.h  Buffer.h  Configuration.cpp  Configuration.h  DataFrame.cpp  DataFrame.h  DataFramePrimitives.cpp  DataFramePrimitives.h  DistributedServer.cpp  DistributedServer.h  Jobs.cpp  Jobs.h  JsonHelpers.cpp  JsonHelpers.h  LaneSpline.h  Sensor.cpp  Sensor.h  SharedMemory.h  Simulator.cpp  Simulator.h  SimulatorCommands.h  Stopwatch.h  UECompatability.h  Util.h  command_config.h  config_types.h  json.hpp  mono_ex.h  sensor_config.h
monodrive/core/src/carla/: Exception.h  Iterator.h  ListView.h  Logging.h  NonCopyable.h  StringUtil.cpp  StringUtil.h  disable-ue4-macros.h
monodrive/core/src/carla/geom/: BoundingBox.h  CubicPolynomial.h  GeoLocation.h  Location.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Rotation.h  Rtree.h  Transform.h  Vector2D.h  Vector3D.h
monodrive/core/src/carla/opendrive/: OpenDriveParser.cpp  OpenDriveParser.h
monodrive/core/src/carla/opendrive/parser/: ControllerParser.cpp  ControllerParser.h  GeoReferenceParser.h  GeometryParser.h  JunctionParser.h  LaneParser.h  ObjectParser.h  ProfilesParser.h  RoadParser.h  SignalParser.cpp  SignalParser.h  TrafficGroupParser.h
monodrive/core/src/carla/road/: Controller.h  InformationSet.h  Junction.h  Lane.h  LaneSection.h  LaneValidity.h  Map.cpp  Map.h  MapBuilder.cpp  MapBuilder.h  MapData.h  MeshFactory.cpp  MeshFactory.h  Object.h  Road.h  RoadElementSet.h  Signal.h  SignalType.h
monodrive/core/src/carla/road/element/: Geometry.h  LaneCrossingCalculator.cpp  LaneCrossingCalculator.h  LaneMarking.h  RoadInfo.h  RoadInfoCrosswalk.h  RoadInfoElevation.h  RoadInfoGeometry.h  RoadInfoIterator.h  RoadInfoLaneAccess.h  RoadInfoLaneBorder.h  RoadInfoLaneHeight.h  RoadInfoLaneMaterial.h  RoadInfoLaneOffset.h  RoadInfoLaneRule.h  RoadInfoLaneVisibility.h  RoadInfoLaneWidth.h  RoadInfoMarkRecord.h  RoadInfoMarkTypeLine.h  RoadInfoSignal.h  RoadInfoSpeed.h  RoadInfoVisitor.h  Waypoint.h
monodrive/core/src/carla/road/object/: RepeatRecord.h
monodrive/core/src/odrSpiral/: odrSpiral.cpp  odrSpiral.h
(+191 files in other folders)
