cmake_minimum_required(VERSION 3.10)

project(buffer_dev)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(camera_sensor camera_sensor.cpp)
add_executable(state_sensor state_sensor.cpp)
add_executable(imu_sensor imu_sensor.cpp)
add_executable(gps_sensor gps_sensor.cpp)
add_executable(radar_sensor radar_sensor.cpp)
add_executable(lidar_sensor lidar_sensor.cpp)
add_executable(semantic_camera_sensor semantic_camera_sensor.cpp)
add_executable(depth_camera_sensor depth_camera_sensor.cpp)
add_executable(scenario_file scenario_file.cpp)
add_executable(occupancy_grid_sensor occupancy_grid_sensor.cpp)
add_executable(semantic_lidar_sensor semantic_lidar_sensor.cpp)
add_executable(ultrasonic_sensor ultrasonic_sensor.cpp)
add_executable(collision_sensor collision_sensor.cpp)

target_link_libraries(camera_sensor monoDriveClient)
target_link_libraries(state_sensor monoDriveClient)
target_link_libraries(imu_sensor monoDriveClient)
target_link_libraries(gps_sensor monoDriveClient)
target_link_libraries(radar_sensor monoDriveClient)
target_link_libraries(lidar_sensor monoDriveClient)
target_link_libraries(semantic_camera_sensor monoDriveClient)
target_link_libraries(depth_camera_sensor monoDriveClient)
target_link_libraries(scenario_file monoDriveClient)
target_link_libraries(occupancy_grid_sensor monoDriveClient)
target_link_libraries(semantic_lidar_sensor monoDriveClient)
target_link_libraries(ultrasonic_sensor monoDriveClient)
target_link_libraries(collision_sensor monoDriveClient)

find_package(OpenCV REQUIRED PATHS "C:/local/opencv/build" "C:/opencv/build")
include_directories(${OpenCV_INCLUDE_DIRS})

target_include_directories(camera_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(camera_sensor ${OpenCV_LIBRARIES})
target_link_libraries(camera_sensor ${OpenCV_LIBRARIES})

target_include_directories(semantic_camera_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(semantic_camera_sensor ${OpenCV_LIBRARIES})
target_link_libraries(semantic_camera_sensor ${OpenCV_LIBRARIES})

target_include_directories(depth_camera_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(depth_camera_sensor ${OpenCV_LIBRARIES})
target_link_libraries(depth_camera_sensor ${OpenCV_LIBRARIES})

target_include_directories(scenario_file PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(scenario_file ${OpenCV_LIBRARIES})
target_link_libraries(scenario_file ${OpenCV_LIBRARIES})

target_include_directories(occupancy_grid_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(occupancy_grid_sensor ${OpenCV_LIBRARIES})
target_link_libraries(occupancy_grid_sensor ${OpenCV_LIBRARIES})
