cmake_minimum_required(VERSION 3.10)

project(dev)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(camera_sensor camera_sensor.cpp)
add_executable(state_sensor state_sensor.cpp)
add_executable(imu_sensor imu_sensor.cpp)
add_executable(gps_sensor gps_sensor.cpp)
add_executable(radar_sensor radar_sensor.cpp)
add_executable(lidar_sensor lidar_sensor.cpp)
add_executable(semantic_camera_sensor semantic_camera_sensor.cpp)
add_executable(depth_camera_sensor depth_camera_sensor.cpp)
add_executable(scenario_file scenario_file.cpp)
add_executable(occupancy_grid_sensor occupancy_grid_sensor.cpp)
add_executable(semantic_lidar_sensor semantic_lidar_sensor.cpp)
add_executable(ultrasonic_sensor ultrasonic_sensor.cpp)
add_executable(collision_sensor collision_sensor.cpp)
add_executable(replay_dev replay_dev.cpp)
add_executable(sensor_frame_count sensor_frame_count.cpp)
add_executable(sensor_frame_count_fixed sensor_frame_count_fixed.cpp)
add_executable(replay_step_dev replay_step.cpp)
add_executable(rpm_sensor rpm_sensor.cpp)
add_executable(waypoint_sensor waypoint_sensor.cpp)
add_executable(multi_viewport multi_viewport.cpp)
add_executable(config_export config_export.cpp)
add_executable(autopilot_control autopilot_control.cpp)
add_executable(camera_360 camera_360.cpp)
add_executable(fisheye_camera fisheye_camera.cpp)
add_executable(replay_new_api replay_new_api.cpp)
add_executable(closed_loop_new_api closed_loop_new_api.cpp)

# link monodrive client
target_link_libraries(camera_sensor monodrive)
target_link_libraries(state_sensor monodrive)
target_link_libraries(imu_sensor monodrive)
target_link_libraries(gps_sensor monodrive)
target_link_libraries(radar_sensor monodrive)
target_link_libraries(lidar_sensor monodrive)
target_link_libraries(semantic_camera_sensor monodrive)
target_link_libraries(depth_camera_sensor monodrive)
target_link_libraries(scenario_file monodrive)
target_link_libraries(occupancy_grid_sensor monodrive)
target_link_libraries(semantic_lidar_sensor monodrive)
target_link_libraries(ultrasonic_sensor monodrive)
target_link_libraries(collision_sensor monodrive)
target_link_libraries(replay_dev monodrive)
target_link_libraries(sensor_frame_count monodrive)
target_link_libraries(sensor_frame_count_fixed monodrive)
target_link_libraries(replay_step_dev monodrive)
target_link_libraries(rpm_sensor monodrive)
target_link_libraries(waypoint_sensor monodrive)
target_link_libraries(multi_viewport monodrive)
target_link_libraries(config_export monodrive)
target_link_libraries(autopilot_control monodrive)
target_link_libraries(camera_360 monodrive)
target_link_libraries(fisheye_camera monodrive)
target_link_libraries(replay_new_api monodrive)
target_link_libraries(closed_loop_new_api monodrive)

# copy monodrive dll to runtime directory
if(MSVC)
  add_custom_target(monodrive_lib_copy_dev)
  add_custom_command(TARGET monodrive_lib_copy_dev POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
      $<TARGET_FILE:monodrive>
      ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/monodrive.dll
  )
  add_dependencies(camera_sensor monodrive_lib_copy_dev)
  add_dependencies(state_sensor monodrive_lib_copy_dev)
  add_dependencies(imu_sensor monodrive_lib_copy_dev)
  add_dependencies(gps_sensor monodrive_lib_copy_dev)
  add_dependencies(radar_sensor monodrive_lib_copy_dev)
  add_dependencies(lidar_sensor monodrive_lib_copy_dev)
  add_dependencies(semantic_camera_sensor monodrive_lib_copy_dev)
  add_dependencies(depth_camera_sensor monodrive_lib_copy_dev)
  add_dependencies(scenario_file monodrive_lib_copy_dev)
  add_dependencies(occupancy_grid_sensor monodrive_lib_copy_dev)
  add_dependencies(semantic_lidar_sensor monodrive_lib_copy_dev)
  add_dependencies(ultrasonic_sensor monodrive_lib_copy_dev)
  add_dependencies(collision_sensor monodrive_lib_copy_dev)
  add_dependencies(replay_dev monodrive_lib_copy_dev)
  add_dependencies(sensor_frame_count monodrive_lib_copy_dev)
  add_dependencies(sensor_frame_count_fixed monodrive_lib_copy_dev)
  add_dependencies(replay_step_dev monodrive_lib_copy_dev)
  add_dependencies(rpm_sensor monodrive_lib_copy_dev)
  add_dependencies(waypoint_sensor monodrive_lib_copy_dev)
  add_dependencies(multi_viewport monodrive_lib_copy_dev)
  add_dependencies(config_export monodrive_lib_copy_dev)
  add_dependencies(autopilot_control monodrive_lib_copy_dev)
  add_dependencies(waypoint_sensor monodrive_lib_copy_dev)
  add_dependencies(camera_360 monodrive_lib_copy_dev)
  add_dependencies(fisheye_camera monodrive_lib_copy_dev)
  add_dependencies(replay_new_api monodrive_lib_copy_dev)
  add_dependencies(closed_loop_new_api monodrive_lib_copy_dev)
endif(MSVC)

# eigen
include_directories(${EIGEN3_INCLUDE_DIR})

# opencv
find_package(OpenCV REQUIRED PATHS "C:/local/opencv/build" "C:/opencv/build")
include_directories(${OpenCV_INCLUDE_DIRS})

target_include_directories(camera_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(camera_sensor ${OpenCV_LIBRARIES})
target_link_libraries(camera_sensor ${OpenCV_LIBRARIES})

target_include_directories(semantic_camera_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(semantic_camera_sensor ${OpenCV_LIBRARIES})
target_link_libraries(semantic_camera_sensor ${OpenCV_LIBRARIES})

target_include_directories(depth_camera_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(depth_camera_sensor ${OpenCV_LIBRARIES})
target_link_libraries(depth_camera_sensor ${OpenCV_LIBRARIES})

target_include_directories(scenario_file PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(scenario_file ${OpenCV_LIBRARIES})
target_link_libraries(scenario_file ${OpenCV_LIBRARIES})

target_include_directories(occupancy_grid_sensor PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(occupancy_grid_sensor ${OpenCV_LIBRARIES})
target_link_libraries(occupancy_grid_sensor ${OpenCV_LIBRARIES})

target_include_directories(replay_dev PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(replay_dev ${OpenCV_LIBRARIES})
target_link_libraries(replay_dev ${OpenCV_LIBRARIES})

target_include_directories(sensor_frame_count PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(sensor_frame_count ${OpenCV_LIBRARIES})
target_link_libraries(sensor_frame_count ${OpenCV_LIBRARIES})

target_include_directories(sensor_frame_count_fixed PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(sensor_frame_count_fixed ${OpenCV_LIBRARIES})
target_link_libraries(sensor_frame_count_fixed ${OpenCV_LIBRARIES})

target_include_directories(replay_step_dev PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(replay_step_dev ${OpenCV_LIBRARIES})
target_link_libraries(replay_step_dev ${OpenCV_LIBRARIES})

target_include_directories(camera_360 PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(camera_360 ${OpenCV_LIBRARIES})
target_link_libraries(camera_360 ${OpenCV_LIBRARIES})

target_include_directories(fisheye_camera PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(fisheye_camera ${OpenCV_LIBRARIES})
target_link_libraries(fisheye_camera ${OpenCV_LIBRARIES})

target_include_directories(replay_new_api PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(replay_new_api ${OpenCV_LIBRARIES})
target_link_libraries(replay_new_api ${OpenCV_LIBRARIES})

target_include_directories(closed_loop_new_api PUBLIC ${OpenCV_INCLUDE_DIRS})
link_libraries(closed_loop_new_api ${OpenCV_LIBRARIES})
target_link_libraries(closed_loop_new_api ${OpenCV_LIBRARIES})

# filesystem
target_link_libraries(config_export -lstdc++fs)
